--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,17 @@ background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
 .delbutton:hover {
   background-color: coral;
 }
+.chngbutton {
+  background-color: DodgerBlue; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 5px 17px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+  margin:0 0 0 5px
+}
+
+/* Darker background on mouse-over */
+.chngbutton:hover {
+  background-color: RoyalBlue;
+}
